#pragma once
#include <string>

class FileReader
{
public:
	static std::stringstream readFile(std::string);
};

